--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.right-side-component {
+  margin-right: 32px;
+}
+
+.left-side-component {
+   margin-left: 32px;
+}
+
 .clickable {
    cursor: pointer;
 }
