--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,13 +1,18 @@
 header {
-  background-color: bisque;
-  width: fit-content;
+  border: 3px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
   height: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  .social-media{
-      position: relative;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+  .header-components {
+    width: fit-content;
+    align-self: center;
+    top: 50%; 
   }
 }
