--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,16 +3,21 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin: 25px 0;
   
+    .social-nav {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+
     .logo-container {
-      height: 100%;
-      width: 70px;
-      padding: 25px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
   
     .options {
-      width: 50%;
       height: 100%;
       display: flex;
       align-items: center;
