--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -3,4 +3,8 @@
   flex-direction: column;
   align-items: center;
   padding: 20px 80px;
+  .bruce-twitch-feed{
+    border: 20px solid black;
+    border-radius: 1%;
+  }
 }
