--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+html, body {
+   max-width: 100%;
+   overflow-x: hidden;
+}
+
 body {
-   overflow: hidden;
    font-family: 'Open Sans Condensed';
    padding: 20px 0;
    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
    background-size: 400% 400%;
    animation: gradientBG 15s ease infinite;
+   box-sizing: border-box;
 }
 
 .clickable {
