--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,6 +2,7 @@
     box-sizing: content-box;
     height: 70px;
     width: 100vw;
+    min-width: 765px;
     display: flex;
     justify-content: space-around;
     margin: 25px 0;
