--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,13 @@ body {
    box-sizing: border-box;
 }
 
-.clickable {
-   cursor: pointer;
-}
-
 a {
    text-decoration: none;
    color: black;
+}
+
+.clickable:hover{
+   cursor: pointer;
 }
 
 .particles {
